[gd_scene load_steps=2 format=2]

[ext_resource path="res://SynthMenu.gd" type="Script" id=1]

[node name="SynthMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Default" type="Label" parent="."]
margin_left = 88.0
margin_top = 48.0
margin_right = 201.0
margin_bottom = 62.0
text = "Nothing selected."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SynthWindow" type="ReferenceRect" parent="."]
margin_left = 62.0
margin_top = 32.0
margin_right = 962.0
margin_bottom = 205.0
border_color = Color( 0.568627, 0.568627, 0.568627, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionWindow" type="ReferenceRect" parent="."]
margin_left = 62.0
margin_top = 213.0
margin_right = 962.0
margin_bottom = 504.0
border_color = Color( 0.568627, 0.568627, 0.568627, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col1" type="ScrollContainer" parent="SelectionWindow"]
margin_left = 26.0
margin_top = 16.0
margin_right = 442.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="SelectionWindow/Col1"]
margin_right = 404.0
margin_bottom = 259.0
rect_min_size = Vector2( 404, 259 )

[node name="Col2" type="ScrollContainer" parent="SelectionWindow"]
margin_left = 458.0
margin_top = 16.0
margin_right = 874.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="SelectionWindow/Col2"]
margin_right = 404.0
margin_bottom = 259.0
rect_min_size = Vector2( 404, 259 )

[node name="Return" type="Button" parent="."]
margin_left = 62.0
margin_top = 532.0
margin_right = 182.0
margin_bottom = 572.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="ReferenceRect" parent="."]
margin_left = 210.0
margin_top = 532.0
margin_right = 962.0
margin_bottom = 572.0
border_color = Color( 0.568627, 0.568627, 0.568627, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Message"]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
